fix submit button overlaping to make last element in summary clickable

--- a/app/javascript/stylesheets/components/button.sass
+++ b/app/javascript/stylesheets/components/button.sass
@@ -1,10 +1,7 @@
-.wrapper-btn-fixed
-  position: fixed
-  bottom: 0
-  width: 100%
-
 .btn-prescription
-  display: inherit
+  position: fixed
   box-shadow: 0px 0px 19px 11px rgba(0,105,217,0.29)
-  margin: 30px auto
+  margin: 0 auto
   bottom: 30px
+  left: 0
+  right: 0
